kubernetes/manifests/tools/health/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: health
spec:
  replicas: 1
  selector:
    matchLabels:
      app: health
  template:
    metadata:
      labels:
        app: health
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 32Mi
