kubernetes/manifests/tools/health/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health
spec:
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: health
